--- a/PrivateHirePage/Components/ImageRotation/ImageRotation.css
+++ b/PrivateHirePage/Components/ImageRotation/ImageRotation.css
@@ -1,6 +1,7 @@
 
       /* CSS for the image container */
       .image-container {
+        margin: 20px 0 0 0;
         width: 500px;
         height: 300px;
         overflow: hidden;
