--- a/SharedComponentsLibrary/CSS Files/Card/card.css
+++ b/SharedComponentsLibrary/CSS Files/Card/card.css
@@ -7,7 +7,7 @@
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-    margin: 20px 0 0 0;
+    margin: 20px 15px 0 0;
   }
   
   .card-header {
