--- a/BookingPage/BookingPage.css
+++ b/BookingPage/BookingPage.css
@@ -4,11 +4,8 @@
     text-align: center;
     margin-bottom: 20px;
     margin-top: 15px;
-    
 }
-
 html{
-    background: no-repeat center fixed;
     background-size: cover;
     background-image: linear-gradient(to bottom right, #CF9FFF, #ebe2ce);
 }
@@ -35,11 +32,10 @@ img{
     position: absolute;
     margin: auto;
     height: 2px;
-    background: #feffec;
+    background: #ebe2ce;
     width: 46%;
     top: 46%;
 }
-
 .line::after{
     left: 0;
 }
@@ -48,15 +44,15 @@ img{
     right: 0;
 }
 
+
 .dot{
-    display: inline-block;
+  display: inline-block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   border-style: solid;
   border-width: 2px;
-  border-color:#feffec;
-  background-color: rgba(0, 0, 0, 0);
+  border-color:#ebe2ce;
   position: relative;
   top:0;
   left:0;
@@ -84,7 +80,11 @@ h2{
     height: 35px;
 }
 .ticket-button:hover{
-    background-color:#b1f2ff;
+    background-color:#ebe2ce;
+}
+.selection{
+    background-color:#ebe2ce;
+    border-color: #CF9FFF;
 }
 .nav-link{
         padding: 0px;
@@ -106,7 +106,7 @@ nav{
 }
 .nav-link:hover{
     text-decoration: underline;
-    color: #feffec;
+    color: #ebe2ce;
 }
 
 select{
@@ -116,6 +116,7 @@ select{
     margin-top: 35px;
 }
 
+/* ensures the footer has full page width */
 *{
     margin:0;
     padding:0;
@@ -138,26 +139,18 @@ ul{
     margin-top: 90px;
     
 }
-.footer-col{
+.footer-column{
     width: 25%;
     padding: 0 15px;
 }
-.footer-col h3{
+.footer-column h3{
     font-size: 19px;
-    color: #ffffff;
+    color: white;
     text-transform: capitalize;
     margin-bottom: 30px;
     position: relative;
 }
-.footer-col h3::before{
-    content: '';
-    position: absolute;
-    left:0;
-    bottom: -10px;
-    background-color: #e91e63;
-    height: 2px;
-    box-sizing: border-box;
-}
+
 
 .amount-select, option:hover{
     display: block;
