--- a/ContactPage/contact_us.css
+++ b/ContactPage/contact_us.css
@@ -3,25 +3,56 @@ html * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 1rem;
+  }
+  
   /* Changes font size for each label within the form */
 label {
-    font-size: 15px;
+    font-size: 13px;
+    text-align: left;
+}
+
+ /* Styles the Opening Hours and Contact Us Text and styles it to display on 50% of the page */
+.contact_us {
+    display:flex;
+    flex-direction: row;
+}
+
+.hours {
+    width: 50%;
+    padding-right: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    padding:0;
+    margin-top: 100px;
+    margin-left: 200px;
+}
+
+.text{
+    text-align: center;
+}
+
+.contactUs{
+    width:50%;
 }
 
 /* The container creates the margins that the contact form fields will be displayed within */
 .container {
     margin-top: 10px;
-    margin-bottom: 200px;
-    margin-right: 400px;
-    margin-left: 400px;
+    margin-bottom: 20px;
+    margin-right: 300px;
+    margin-left: 300px;
     border-spacing: 50px;
     border: 2px solid #9381FF; 
-    border-radius: 5px; 
+    border-radius: 2px; 
     box-sizing: border-box;
     padding: 25px;
     background: #F8F7FF;
+    width: 50%;
 }
-
 
 /* Any text field within the form will follow the CSS below (forename, surname) */
 input[type=text], select, textarea {
@@ -33,7 +64,7 @@ input[type=text], select, textarea {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 /* Any tel field within the form will follow the CSS below (Contact_Number) */
@@ -46,7 +77,7 @@ input[type=tel] {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical; 
-    font-size: 15px;
+    font-size: 13px;
 }
 
 /* Any email field within the form will follow the CSS below (email) */
@@ -59,32 +90,21 @@ input[type=email] {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical; 
-    font-size: 15px;
+    font-size: 13px;
 }
 
 /* Submit Button */
 input[type=submit] {
     background-color: #FFD8BE;
     color: black;
-    padding: 20px 50px;
+    padding: 15px 35px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 15px;
-    margin-right:10px;
+    font-size: 13px;
     font-weight: bold;
-}
-
-/* Reset Button */
-input[type=button] {
-    background-color: #FFD8BE;
-    color: black;
-    padding: 20px 50px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: bold;
+    display: block;
+    margin: auto;
 }
 
 /* When you hover over the Submit Button the colour of the text box will change to #FFEEDD  */
@@ -92,41 +112,53 @@ input[type=submit]:hover {
     background-color: #FFEEDD;
 }
 
-/* When you hover over the Reset Button the colour of the text box will change to #FFEEDD  */
-input[type=button]:hover {
-    background-color: #FFEEDD;
-}
-
-/* Will align buttons center  */
-.align{
-    display:flex;
-    align-items: center;
-    margin-left: 350px;
-}
 
 /* will align h1 text to centre of page and display the text in the colour #9381FF  */
 h1 {
     text-align: center;
     color:#9381FF;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 /* will align h2 text to centre of page and display the text in the colour #9381FF  */
 h2 {
     text-align: center;
     color: #9381FF;
-    font-size: 30px
+    font-size: 25px
 }
 
-/* opening.hours will be displayed in the centre of the page */
-.opening_Hours {
-    text-align: center;
-    font-size: 20px;
+/* Style the modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:#F8F7FF;
 }
 
-/* contact_us will be displayed in the centre of the page */
-.contact_us {
+.modal-content {
+    background-color: #FFEEDD;
+    margin: 15% auto;
+    padding: 20px;
+    width: 60%;
     text-align: center;
-    font-size: 20px;
 }
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
