--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.css
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.css
@@ -3,7 +3,7 @@
     margin-left: 200px;
     text-decoration: none;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: black;
+    color: white;
     font-size: 16px;
 }
 
