--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.css
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.css
@@ -41,11 +41,11 @@ color: #feffec;
 }
 
 .line::after{
-    left: 0;
+    left: 50;
 }
 
 .line::before{
-    right: 0;
+    right: 50%;
 }
 
 .dot{
@@ -59,5 +59,5 @@ color: #feffec;
   position: relative;
   top:0;
   left:0;
-  margin-left: 594px;
+  margin-left: 50%;
 }
