--- a/SharedComponentsLibrary/NavBar/NavBar_Divider.css
+++ b/SharedComponentsLibrary/NavBar/NavBar_Divider.css
@@ -1,6 +1,6 @@
 .nav-link{
     padding: 0px;
-    margin-left: 200px;
+    margin-left: 16.5%;
     text-decoration: none;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
