--- a/ContactPage/contact_us.css
+++ b/ContactPage/contact_us.css
@@ -1,58 +1,113 @@
+/* Nav Bar Styling*/
+
+header{
+    background-color:#b8b8ff;
+    margin-top: 0 ;
+    padding: 0; 
+  }
+  
+  .nav{
+    margin-top: 0 ;
+    padding: 0; 
+  }
+  
+  .nav-link{
+    padding: 0px;
+    margin-left: 200px;
+    text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
+    font-size: 16px;
+  }
+  
+  nav{
+  width: 100%;
+  margin-left: 8px;
+  
+  }
+  .navbar-list{
+  list-style-type: none;
+  margin-top: 40px;
+  }
+  
+  .nav-link:hover{
+  text-decoration: underline;
+  color: #feffec;
+  }
+  
+  .container-divider{
+    padding: 12px;
+  }
+  .line{
+    width: 100%;
+    height: 45px;
+    position: relative;
+  }
+  
+  .line::after, .line::before{
+    content: "";
+    position: absolute;
+    margin: auto;
+    height: 2px;
+    background: #feffec;
+    width: 46%;
+    top: 46%;
+  }
+  
+  .line::after{
+    left: 0;
+  }
+  
+  .line::before{
+    right: 0;
+  }
+  
+  .dot{
+    display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 2px;
+  border-color:#feffec;
+  background-color: rgba(0, 0, 0, 0);
+  position: relative;
+  top:0;
+  left:0;
+  margin-left: 594px;
+  
+  }
+  
 /* Global font for the entire page */
 html * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-  }
-  
   /* Changes font size for each label within the form */
 label {
-    font-size: 13px;
-    text-align: left;
+    font-size: 15px;
 }
 
- /* Styles the Opening Hours and Contact Us Text and styles it to display on 50% of the page */
-.contact_us {
-    display:flex;
-    flex-direction: row;
+body{
+    background-color: white;
 }
 
-.hours {
-    width: 50%;
-    padding-right: 20px;
-    box-sizing: border-box;
-    text-align: center;
-    padding:0;
-    margin-top: 100px;
-    margin-left: 200px;
-}
 
-.text{
-    text-align: center;
-}
-
-.contactUs{
-    width:50%;
-}
 
 /* The container creates the margins that the contact form fields will be displayed within */
-.container {
+.form_container{
     margin-top: 10px;
-    margin-bottom: 20px;
-    margin-right: 300px;
-    margin-left: 300px;
+    margin-bottom: 200px;
+    margin-right: 400px;
+    margin-left: 400px;
     border-spacing: 50px;
     border: 2px solid #9381FF; 
-    border-radius: 2px; 
+    border-radius: 5px; 
     box-sizing: border-box;
     padding: 25px;
     background: #F8F7FF;
-    width: 50%;
 }
+
 
 /* Any text field within the form will follow the CSS below (forename, surname) */
 input[type=text], select, textarea {
@@ -64,7 +119,7 @@ input[type=text], select, textarea {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 /* Any tel field within the form will follow the CSS below (Contact_Number) */
@@ -77,7 +132,7 @@ input[type=tel] {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical; 
-    font-size: 13px;
+    font-size: 15px;
 }
 
 /* Any email field within the form will follow the CSS below (email) */
@@ -90,21 +145,32 @@ input[type=email] {
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical; 
-    font-size: 13px;
+    font-size: 15px;
 }
 
 /* Submit Button */
 input[type=submit] {
     background-color: #FFD8BE;
     color: black;
-    padding: 15px 35px;
+    padding: 20px 50px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 13px;
+    font-size: 15px;
+    margin-right:10px;
     font-weight: bold;
-    display: block;
-    margin: auto;
+}
+
+/* Reset Button */
+input[type=button] {
+    background-color: #FFD8BE;
+    color: black;
+    padding: 20px 50px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 /* When you hover over the Submit Button the colour of the text box will change to #FFEEDD  */
@@ -112,19 +178,42 @@ input[type=submit]:hover {
     background-color: #FFEEDD;
 }
 
+/* When you hover over the Reset Button the colour of the text box will change to #FFEEDD  */
+input[type=button]:hover {
+    background-color: #FFEEDD;
+}
+
+/* Will align buttons center  */
+.align{
+    width: 150px;
+    text-align: center;
+    margin:0 auto;
+}
 
 /* will align h1 text to centre of page and display the text in the colour #9381FF  */
 h1 {
     text-align: center;
     color:#9381FF;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 /* will align h2 text to centre of page and display the text in the colour #9381FF  */
 h2 {
     text-align: center;
     color: #9381FF;
-    font-size: 25px
+    font-size: 30px
+}
+
+/* opening.hours will be displayed in the centre of the page */
+.opening_Hours {
+    text-align: center;
+    font-size: 18px;
+}
+
+/* contact_us will be displayed in the centre of the page */
+.contact_us {
+    text-align: center;
+    font-size: 18px;
 }
 
 /* Style the modal */
@@ -162,3 +251,70 @@ h2 {
         cursor: pointer;
     }
 
+/* Style the Footer */
+
+    .container{
+        max-width: 1170px;
+        margin:auto
+    }
+    .row{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    ul{
+        list-style: none;
+    }
+    .footer{
+        background-color: #24262b;
+        padding: 70px;
+        margin-top: 90px;
+        
+    }
+    .footer-col{
+        width: 25%;
+        padding: 0 15px;
+    }
+    .footer-col h3{
+        font-size: 19px;
+        color: #ffffff;
+        text-transform: capitalize;
+        margin-bottom: 30px;
+        position: relative;
+    }
+    .footer-col h3::before{
+        content: '';
+        position: absolute;
+        left:0;
+        bottom: -10px;
+        background-color: #e91e63;
+        height: 2px;
+        box-sizing: border-box;
+    }
+    
+    
+    .about-us{
+        font-size: x-small;
+    }
+    .our-company-list{
+        text-align: left;
+    }
+    
+    
+    a{
+        text-decoration: none;
+        color: #fff;
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: small;
+    }
+    h3{
+        text-decoration: underline;
+        margin-bottom: 0;
+    }
+    .social{
+        padding: 7px;
+    }
+    .help{
+        margin-top: 40px;
+    }
+    
+    
