Font and field validation updates

--- a/BookingPage/BookingPage.css
+++ b/BookingPage/BookingPage.css
@@ -1,9 +1,10 @@
 .main-title{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     text-align: center;
     margin-bottom: 20px;
     margin-top: 15px;
+    font-size: 33px;
 }
 html{
     background-size: cover;
@@ -61,7 +62,7 @@ img{
 }
 
 h2{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     color: black;
     text-align: center;
@@ -90,7 +91,7 @@ h2{
         padding: 0px;
         margin-left: 200px;
         text-decoration: none;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: black;
         font-size: 16px;
 }
@@ -111,7 +112,7 @@ nav{
 
 select{
     position:relative;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-left: 560px;
     margin-top: 35px;
 }
@@ -194,7 +195,7 @@ ul{
 a{
     text-decoration: none;
     color: #fff;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: small;
 }
 h3{
