--- a/HomePage/home_page.css
+++ b/HomePage/home_page.css
@@ -11,17 +11,12 @@ header{
   padding: 0; 
 }
 
-.nav{
-  margin-top: 0 ;
-  padding: 0; 
-}
-
 .nav-link{
   padding: 0px;
-  margin-left: 200px;
+  margin-left: 16.5%;
   text-decoration: none;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: black;
+  color: white;
   font-size: 16px;
 }
 
@@ -34,7 +29,6 @@ margin-left: 8px;
 list-style-type: none;
 margin-top: 40px;
 }
-
 .nav-link:hover{
 text-decoration: underline;
 color: #feffec;
@@ -60,27 +54,25 @@ color: #feffec;
 }
 
 .line::after{
-  left: 0;
+  left: 50;
 }
 
 .line::before{
-  right: 0;
+  right: 50%;
 }
 
 .dot{
-  display: inline-block;
+display: inline-block;
 width: 50px;
 height: 50px;
 border-radius: 50%;
 border-style: solid;
 border-width: 2px;
 border-color:#feffec;
-background-color: rgba(0, 0, 0, 0);
 position: relative;
 top:0;
 left:0;
-margin-left: 594px;
-
+margin-left: 50%;
 }
 
 
