--- a/ContactPage/contact_us.css
+++ b/ContactPage/contact_us.css
@@ -63,7 +63,7 @@ color: #feffec;
 }
 
 body{
-    background-color: green;
+    background-color: white;
 }
   
 /* Global font for the entire page */
