--- a/BookingPage/BookingPage.css
+++ b/BookingPage/BookingPage.css
@@ -1,9 +1,10 @@
 .main-title{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     text-align: center;
     margin-bottom: 20px;
     margin-top: 15px;
+    font-size: 33px;
 }
 html{
     background-size: cover;
@@ -18,50 +19,9 @@ img{
     border-radius: 10px;
 
 }
-.container-divider{
-    padding: 12px;
-}
-.line{
-    width: 100%;
-    height: 45px;
-    position: relative;
-}
-
-.line::after, .line::before{
-    content: "";
-    position: absolute;
-    margin: auto;
-    height: 2px;
-    background: #ebe2ce;
-    width: 46%;
-    top: 46%;
-}
-.line::after{
-    left: 0;
-}
-
-.line::before{
-    right: 0;
-}
-
-
-.dot{
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border-style: solid;
-  border-width: 2px;
-  border-color:#ebe2ce;
-  position: relative;
-  top:0;
-  left:0;
-  margin-left: 594px;
-
-}
 
 h2{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
     color: black;
     text-align: center;
@@ -90,7 +50,7 @@ h2{
         padding: 0px;
         margin-left: 200px;
         text-decoration: none;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: black;
         font-size: 16px;
 }
@@ -111,7 +71,7 @@ nav{
 
 select{
     position:relative;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-left: 560px;
     margin-top: 35px;
 }
@@ -194,7 +154,7 @@ ul{
 a{
     text-decoration: none;
     color: #fff;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: small;
 }
 h3{
